@@ -5,10 +5,9 @@ import java.awt.*;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.DataFlavor;
 import java.awt.datatransfer.Transferable;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
+import java.time.Duration;
 import java.util.Date;
 import java.util.Map;
 import java.util.concurrent.FutureTask;
@@ -34,8 +33,8 @@ public class Main {
     /**
      * 该下载器的尺寸
      */
-    private int width = 500;
-    private int heigh = 300;
+    private final int width = 500;
+    private final int heigh = 300;
     /**
      * 屏幕尺寸
      */
@@ -52,7 +51,7 @@ public class Main {
      */
     private String fileToSave;
 
-    private String TAG = "状态: ";
+    private final String TAG = "状态: ";
 
     /**
      * 文件大小
@@ -88,7 +87,7 @@ public class Main {
         /**
          * 设置界面在屏幕正中间
          */
-        Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
+        var screenSize = Toolkit.getDefaultToolkit().getScreenSize();
         screenWidth = (int) screenSize.getWidth();
         screenHeigh = (int) screenSize.getHeight();
         jFrame.setBounds((screenWidth - width) / 2,
@@ -110,9 +109,9 @@ public class Main {
          * 第一个JPanel
          * 进行链接的验证
          */
-        JPanel dowloadPathPanel = new JPanel();
+        var dowloadPathPanel = new JPanel();
         dowloadPathPanel.setBackground(Color.WHITE);
-        JLabel label1 = new JLabel("下载链接:");
+        var label1 = new JLabel("下载链接:");
         label1.setFont(font);
         urlField = new JTextField(20);
         urlField.setFont(font);
@@ -120,41 +119,35 @@ public class Main {
         searchBn.setBackground(Color.WHITE);
         searchBn.setFont(font);
         searchBn.setFocusPainted(false);
-        searchBn.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                if (!(urlField.getText().trim().equals("") || urlField.getText() == null)) {
-                    /**
-                     * FutureTask的get方法是个阻塞方法，新开一个线程对其处理比较好
-                     */
-                    new Thread(new Runnable() {
-                        @Override
-                        public void run() {
-                            try {
-                                urlPath = urlField.getText().trim();
-                                check = new Check(urlPath);
-                                FutureTask<Map<String, String>> futureTask = new FutureTask<>(check);
-                                new Thread(futureTask).start();
-                                Map<String, String> map = futureTask.get();
+        searchBn.addActionListener(e -> {
+            if (!(urlField.getText().trim().isEmpty())) {
+                /**
+                 * FutureTask的get方法是个阻塞方法，新开一个线程对其处理比较好
+                 */
+                Thread.startVirtualThread(() -> {
+                    try {
+                        urlPath = urlField.getText().trim();
+                        check = new Check(urlPath);
+                        var futureTask = new FutureTask<>(check);
+                        Thread.startVirtualThread(futureTask);
+                        var map = futureTask.get();
 
-                                statusField.setText(TAG + "已验证链接");
-                                Thread.sleep(1000);
-                                fileSize = Long.parseLong(map.getOrDefault("Content-Length", "-1"));
-                                contentType = map.getOrDefault("Content-Type", null).split("\\:\\s?")[1];
-                                if (fileSize <= 0) {
-                                    statusField.setText(TAG + "链接无效");
-                                } else {
-                                    statusField.setText(TAG + "文件类型:" + contentType +
-                                            ", 文件大小:" + getFileSize());
-                                }
-                            } catch (Exception e) {
-                                e.printStackTrace();
-                            }
+                        statusField.setText(TAG + "已验证链接");
+                        Thread.sleep(1000);
+                        fileSize = Long.parseLong(map.getOrDefault("Content-Length", "-1"));
+                        contentType = map.getOrDefault("Content-Type", null).split("\\:\\s?")[1];
+                        if (fileSize <= 0) {
+                            statusField.setText(TAG + "链接无效");
+                        } else {
+                            statusField.setText(TAG + "文件类型:" + contentType +
+                                    ", 文件大小:" + getFileSize());
                         }
-                    }).start();
-                } else {
-                    statusField.setText(TAG + "请输入下载链接");
-                }
+                    } catch (Exception ex) {
+                        ex.printStackTrace();
+                    }
+                });
+            } else {
+                statusField.setText(TAG + "请输入下载链接");
             }
         });
         dowloadPathPanel.add(label1);
@@ -166,9 +159,9 @@ public class Main {
          * 第二个面板
          * 进行保存路径的设置
          */
-        JPanel savePathPanel = new JPanel();
+        var savePathPanel = new JPanel();
         savePathPanel.setBackground(Color.WHITE);
-        JLabel label2 = new JLabel("保存路径:");
+        var label2 = new JLabel("保存路径:");
         label2.setFont(font);
         filePathField = new JTextField(20);
         filePathField.setFont(font);
@@ -176,25 +169,21 @@ public class Main {
         fileChooseBn.setBackground(Color.WHITE);
         fileChooseBn.setFont(font);
         fileChooseBn.setFocusPainted(false);
-        fileChooseBn.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                JFileChooser chooser = new JFileChooser();
-                chooser.setFont(font);
-                chooser.setDialogTitle("选择保存文件夹");
-                chooser.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
-                int result = chooser.showOpenDialog(jFrame);
-                if (result == JFileChooser.APPROVE_OPTION) {
-                    if (getFileName() == null) {
-                        fileToSave = chooser.getSelectedFile().getPath();
-                    } else {
-                        fileToSave = Paths.get(chooser.getSelectedFile().getPath(), getFileName()).toString();
-                        statusField.setText(TAG + "已选择" + fileToSave);
-                    }
-                    println(fileToSave);
-                    filePathField.setText(fileToSave);
-
+        fileChooseBn.addActionListener(e -> {
+            var chooser = new JFileChooser();
+            chooser.setFont(font);
+            chooser.setDialogTitle("选择保存文件夹");
+            chooser.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
+            int result = chooser.showOpenDialog(jFrame);
+            if (result == JFileChooser.APPROVE_OPTION) {
+                if (getFileName() == null) {
+                    fileToSave = chooser.getSelectedFile().getPath();
+                } else {
+                    fileToSave = Paths.get(chooser.getSelectedFile().getPath(), getFileName()).toString();
+                    statusField.setText(TAG + "已选择" + fileToSave);
                 }
+                println(fileToSave);
+                filePathField.setText(fileToSave);
             }
         });
         savePathPanel.add(label2);
@@ -217,55 +206,64 @@ public class Main {
         dowloadProgress.setBorderPainted(true);
         dowloadProgress.setBackground(Color.WHITE);
         dowloadProgress.setForeground(new Color(0x6959CD));
-        JPanel downPanel = new JPanel();
+        var downPanel = new JPanel();
         downPanel.setBackground(Color.WHITE);
         dowloadBn = new JButton("下载");
         dowloadBn.setBackground(Color.WHITE);
         dowloadBn.setFocusPainted(false);
         dowloadBn.setFont(font);
-        dowloadBn.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                urlPath = urlPath.equals(urlField.getText().trim()) ? urlPath : urlField.getText().trim();
-                fileToSave = fileToSave.equals(filePathField.getText().trim()) ? fileToSave : filePathField.getText().trim();
-                if (urlPath == null || fileToSave == null) {
-                    statusField.setText(TAG + "下载失败，请填写链接和路径");
-                    return;
-                }
-                DownUntil downUntil = new DownUntil(urlPath, fileToSave, fileSize, contentType);
-                /**
-                 * 新开一个线程监控下载情况
-                 * 并在进度条上反映出来
-                 */
-                new Thread(new Runnable() {
-                    @Override
-                    public void run() {
-                        double schedule = 0;
-                        long start = System.currentTimeMillis();
-                        statusField.setText(TAG + "正在下载");
-                        while ((schedule = downUntil.getSchedule()) < 1d) {
-                            dowloadProgress.setString(String.format("%.2f", schedule*100) + "%");
-                            dowloadProgress.setValue((int) (schedule * 100));
-                            dowloadProgress.validate();
-                            try {
-                                Thread.sleep(400);
-                            } catch (InterruptedException e) {
-                                e.printStackTrace();
-                            }
-                        }
-                        long end = System.currentTimeMillis();
-                        dowloadProgress.setValue(100);
-                        dowloadProgress.setString("下载完成");
-                        statusField.setText(TAG + "下载用时: " + excuteTime(end-start));
+        dowloadBn.addActionListener(e -> {
+            urlPath = urlPath != null && urlPath.equals(urlField.getText().trim()) ? urlPath : urlField.getText().trim();
+            fileToSave = fileToSave != null && fileToSave.equals(filePathField.getText().trim()) ? fileToSave : filePathField.getText().trim();
+            if (urlPath == null || fileToSave == null) {
+                statusField.setText(TAG + "下载失败，请填写链接和路径");
+                return;
+            }
+            var downUntil = new DownUntil(urlPath, fileToSave, fileSize, contentType);
+            /**
+             * 新开一个线程监控下载情况
+             * 并在进度条上反映出来
+             */
+            Thread.startVirtualThread(() -> {
+                double schedule = 0;
+                long start = System.currentTimeMillis();
+                statusField.setText(TAG + "正在下载");
+                while ((schedule = downUntil.getSchedule()) < 1d) {
+                    // 获取当前下载速度和预计剩余时间
+                    long speed = downUntil.getCurrentSpeed();
+                    long remainingTime = downUntil.getEstimatedTimeRemaining();
+                    
+                    // 格式化下载速度
+                    String speedText = formatSpeed(speed);
+                    
+                    // 格式化剩余时间
+                    String remainingTimeText = formatTime(remainingTime);
+                    
+                    // 更新进度条显示
+                    String progressText = String.format("%.2f", schedule*100) + "% - " + speedText;
+                    if (remainingTime > 0) {
+                        progressText += " - 剩余: " + remainingTimeText;
                     }
-                }).start();
-
-
-                statusField.setText(TAG + "正在准备下载");
-                long time = downUntil.dowload();
-                if (time == -1) {
-                    statusField.setText(TAG + "下载失败");
+                    
+                    dowloadProgress.setString(progressText);
+                    dowloadProgress.setValue((int) (schedule * 100));
+                    dowloadProgress.validate();
+                    try {
+                        Thread.sleep(400);
+                    } catch (InterruptedException ex) {
+                        ex.printStackTrace();
+                    }
                 }
+                long end = System.currentTimeMillis();
+                dowloadProgress.setValue(100);
+                dowloadProgress.setString("下载完成");
+                statusField.setText(TAG + "下载用时: " + excuteTime(end-start));
+            });
+
+            statusField.setText(TAG + "正在准备下载");
+            long time = downUntil.dowload();
+            if (time == -1) {
+                statusField.setText(TAG + "下载失败");
             }
         });
         downPanel.add(dowloadProgress);
@@ -276,7 +274,7 @@ public class Main {
          * 第四个面板
          * 状态信息
          */
-        JPanel statusPanel = new JPanel();
+        var statusPanel = new JPanel();
         statusPanel.setBackground(Color.WHITE);
         statusField = new JTextField(31);
         statusField.setText("状态: ");
@@ -295,13 +293,13 @@ public class Main {
          * 在启动时查看系统剪贴板中的内容
          * 如果有链接，就直接复制到urlField上去
          */
-        Clipboard sysClip = Toolkit.getDefaultToolkit().getSystemClipboard();
-        Transferable clipTf = sysClip.getContents(null);
+        var sysClip = Toolkit.getDefaultToolkit().getSystemClipboard();
+        var clipTf = sysClip.getContents(null);
         if (clipTf != null) {
             if (clipTf.isDataFlavorSupported(DataFlavor.stringFlavor)) {
                 try {
-                    String ret = (String) clipTf.getTransferData(DataFlavor.stringFlavor);
-                    String check = "((http|ftp|https)://)(([a-zA-Z0-9\\._-]+\\.[a-zA-Z]{2,6})|([0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}))(:[0-9]{1,4})*(/[a-zA-Z0-9\\&%_\\./-~-]*)?";
+                    var ret = (String) clipTf.getTransferData(DataFlavor.stringFlavor);
+                    var check = "((http|ftp|https)://)(([a-zA-Z0-9\\._-]+\\.[a-zA-Z]{2,6})|([0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}))(:[0-9]{1,4})*(/[a-zA-Z0-9\\&%_\\./-~-]*)?";
                     if (Pattern.matches(check, ret)) {
                         statusField.setText(TAG + "检测到剪贴板的链接");
                         urlField.setText(ret);
@@ -316,6 +314,7 @@ public class Main {
     public Main() {
         init();
     }
+    
     public static void main(String[] args) {
         new Main();
     }
@@ -330,27 +329,24 @@ public class Main {
 
     /**
      * 获取文件大小，格式化数字
-     * @return
+     * @return 格式化后的文件大小字符串
      */
-    private String getFileSize () {
-        if (fileSize < 1024) {
-            return fileSize + "B";
-        } else if (fileSize < 1024*1024){
-            return String.format("%.2f", fileSize * 1.0 / 1024) + "KB";
-        } else if (fileSize < 1024*1024*1024){
-            return String.format("%.2f", fileSize * 1.0 / (1024*1024)) + "MB";
-        } else {
-            return String.format("%.2f", fileSize * 1.0 / (1024*1024*1024)) + "GB";
-        }
+    private String getFileSize() {
+        return switch ((int) Math.log10(fileSize) / 3) {
+            case 0 -> fileSize + "B";
+            case 1 -> String.format("%.2f", fileSize * 1.0 / 1024) + "KB";
+            case 2 -> String.format("%.2f", fileSize * 1.0 / (1024*1024)) + "MB";
+            default -> String.format("%.2f", fileSize * 1.0 / (1024*1024*1024)) + "GB";
+        };
     }
 
     /**
      * 通过URL解析或者content-type转换获取文件名，用户也可以自定义文件名
-     * @return
+     * @return 解析的文件名
      */
     private String getFileName() {
         println(contentType);
-        if ((urlPath = urlField.getText()).equals("") || urlPath == null) {
+        if ((urlPath = urlField.getText()).isEmpty()) {
             statusField.setText(TAG + "请输入下载链接");
             return null;
         } else {
@@ -359,7 +355,7 @@ public class Main {
             if (Pattern.matches("^\\S{3,20}\\.\\S{3,10}", name)) {
                 return name;
             } else if (MimeUtils.hasMimeType(contentType)) {
-                SimpleDateFormat dateformat=new SimpleDateFormat("yyyy-MM-dd-HH-mm-ss");
+                var dateformat = new SimpleDateFormat("yyyy-MM-dd-HH-mm-ss");
                 return "Dowload" + dateformat.format(new Date()) + "." + MimeUtils.guessExtensionFromMimeType(contentType);
             }
         }
@@ -368,18 +364,53 @@ public class Main {
 
     /**
      * 对下载所用的时间格式进行处理
-     * @param time
-     * @return
+     * @param time 时间毫秒数
+     * @return 格式化后的时间字符串
      */
     private String excuteTime(long time) {
-        if (time < 1000) {
-            return time + "ms";
-        } else if (time < 1000*60) {
-            return time/1000 + "s";
-        } else if (time < 1000*60*60) {
-            return time/(1000*60) + "min";
+        var duration = Duration.ofMillis(time);
+        
+        if (duration.toHours() > 0) {
+            return duration.toHours() + "h";
+        } else if (duration.toMinutes() > 0) {
+            return duration.toMinutes() + "min";
+        } else if (duration.toSeconds() > 0) {
+            return duration.toSeconds() + "s";
         } else {
-            return time/(1000*60*60) + "h";
+            return time + "ms";
+        }
+    }
+
+    /**
+     * 格式化下载速度
+     * @param speed 下载速度（字节/秒）
+     * @return 格式化后的下载速度字符串
+     */
+    private String formatSpeed(long speed) {
+        return switch ((int) Math.log10(speed) / 3) {
+            case 0 -> speed + "B/s";
+            case 1 -> String.format("%.2f", speed * 1.0 / 1024) + "KB/s";
+            case 2 -> String.format("%.2f", speed * 1.0 / (1024*1024)) + "MB/s";
+            default -> String.format("%.2f", speed * 1.0 / (1024*1024*1024)) + "GB/s";
+        };
+    }
+
+    /**
+     * 格式化剩余时间
+     * @param time 剩余时间（毫秒）
+     * @return 格式化后的剩余时间字符串
+     */
+    private String formatTime(long time) {
+        var duration = Duration.ofMillis(time);
+        
+        if (duration.toHours() > 0) {
+            return duration.toHours() + "小时";
+        } else if (duration.toMinutes() > 0) {
+            return duration.toMinutes() + "分钟";
+        } else if (duration.toSeconds() > 0) {
+            return duration.toSeconds() + "秒";
+        } else {
+            return time + "毫秒";
         }
     }
 }
